--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,7 @@ NEXT_PUBLIC_API_URL=http://localhost:3001
 NEXT_PUBLIC_URL=http://localhost:3000/
 
 
+
 # Generar una llave sercreta, copiar y pegar en la consola el siguiente codigo:
 # openssl rand -base64 32
 # al ejecurarlo dandole enter, nos devuelve una llave random 
@@ -12,3 +13,11 @@ NEXT_PUBLIC_URL=http://localhost:3000/
 # ponerla entre comillas por si tiene caracteres como = que hagan funcionar mal la llave
 # NEXTAUTH_SECRET="ncq+/P8LhRFlW2AykKCMhNTWYpnT0eNgjkLHHvDuk4L="
 NEXTAUTH_SECRET=
+
+
+# Paypal
+# https://developer.paypal.com/dashboard/
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+
+# cuentatest1@gmail.com // 12345678
+# cuentaest2@gmail.com // 12345678
