--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.3.1",
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "swiper": "^11.2.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
