--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "framer-motion": "^12.3.1",
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.15",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next-view-transitions": "^0.3.4",
+    "react": "18",
+    "react-calendar": "^5.1.0",
+    "react-dom": "18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-select": "^5.10.0",
     "swiper": "^11.2.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
