--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,10 @@ NEXT_PUBLIC_URL=http://localhost:3000/
 # NEXTAUTH_SECRET="ncq+/P8LhRFlW2AykKCMhNTWYpnT0eNgjkLHHvDuk4L="
 NEXTAUTH_SECRET=
 
+# https://console.cloudinary.com
+# url necesario para subir las imagenes
+CLOUDINARY_URL=
+
 
 # Paypal
 # https://developer.paypal.com/dashboard/
