--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.3.1",
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.15",
     "next-view-transitions": "^0.3.4",
+    "notistack": "^3.0.2",
     "react": "18",
     "react-calendar": "^5.1.0",
     "react-dom": "18",
