--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-view-transitions": "^0.3.4",
     "notistack": "^3.0.2",
     "react": "18",
+    "react-apexcharts": "^1.7.0",
     "react-calendar": "^5.1.0",
     "react-dom": "18",
     "react-hook-form": "^7.54.2",
